test/_generated-libs/undici-types/undici_types/errors/HTTPParserError.hx
package undici_types.errors;

@:jsRequire("undici-types", "errors.HTTPParserError") extern class HTTPParserError extends UndiciError {
	static var prototype : HTTPParserError;
}